--- a/app1/Dockerfile
+++ b/app1/Dockerfile
@@ -4,10 +4,13 @@ WORKDIR /app
 
 COPY requirements.txt /app/
 
-RUN pip install --no-cache-dir -r  requirements.txt
+RUN apt update\
+    && apt install -y --no-install-recommends postgresql-client build-essential libpq-dev\
+    && rm -rf /var/lib/apt/lists/*\
+    && pip install --no-cache-dir -r  requirements.txt
 
 COPY . .
 
-EXPOSE 8001
+EXPOSE 8002
 
 CMD ["python","manage.py","runserver","0.0.0.0:8000"]
