--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,15 +20,20 @@ services:
 
   app1:
     build: ./app1
+    container_name: app1
     ports:
       - "8001:8000"
+      - "8006:8006"
     environment:
       DOCKER_ENV: 'true'
+      METRICS_PORT: '8006'
     networks:
       - webnet
     depends_on:
       postgres:
         condition: service_healthy
+      prometheus:
+        condition: service_started
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
@@ -37,20 +42,63 @@ services:
 
   app2:
     build: ./app2
+    container_name: app2
     ports:
       - "8002:8000"
+      - "8005:8005"
     environment:
       DOCKER_ENV: 'true'
+      METRICS_PORT: '8005'
     networks:
       - webnet
     depends_on:
       postgres:
         condition: service_healthy
+      prometheus:
+        condition: service_started
     command: >
       sh -c "python manage.py makemigrations &&
              python manage.py migrate &&
              python manage.py runserver 0.0.0.0:8000"
     restart: unless-stopped
+
+  node-exporter:
+    image: prom/node-exporter:latest
+    container_name: node-exporter
+    restart: unless-stopped
+    ports:
+      - "9100:9100"
+    networks:
+      - webnet
+    pid: "host"
+    volumes:
+      - /proc:/host/proc:ro
+      - /sys:/host/sys:ro
+      - /:/rootfs:ro
+    command:
+      - '--path.procfs=/host/proc'
+      - '--path.sysfs=/host/sys'
+      - '--path.rootfs=/rootfs'
+      
+  prometheus:
+    image: prom/prometheus:latest
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+    - webnet
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+    networks:
+    - webnet
 
 networks:
   webnet:
