--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ DB_PORT = 5432
 SECRET_KEY=django-insecure-dta3df*@efe%x_=mzm)fsw2gb1x_b8b+de=7=w4rrxt9g8j^f1
 
 # Para ambiente local
-DATABASE_HOST_LOCAL=localhost
+DATABASE_HOST_LOCAL=localhost #se for um dev, colocar ip do servidor com o banco rodando
 
 # Para ambiente Docker
 DATABASE_HOST_DOCKER=postgres
